Change in model, test template, add admin and view

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <center><h1>Прокуратура Одесской области</h1></center>
+    <center><h1>Прокуратура Одеської області</h1></center>
     {% block content %}{% endblock %}
     {% block footer %}
 <pre>
