--- a/templates/main.html
+++ b/templates/main.html
@@ -1,16 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}The current time{% endblock %}
+{% block title %}Прокуратура Одеської області{% endblock %}
 
 {% block content %}
 <pre>
 
 
 </pre>
-{% for empl in employee %}
-    <li>{{ empl }} {{ empl.position }} {{ empl.telephone }}</li>
 
-{% endfor %}
 
 {% endblock %}
 
@@ -18,15 +15,34 @@
 
 {% block footer %}
 
-<div style='margin-top:8px'><table class='mover' width='100%' border='0' align='center' cellspacing='1' cellpadding='3'>
-<tr class='dark' style='font-weight: bold; text-align: center;'><td width='22'>#</td>
-    <td width='14' title='Статус'>•</td>
-    <td width='14' title='Достижения'><img src='/images/achievement/ach.png' width='16' height='16'/></td>
-    <td width='86' align='left'>Ник</td>
-    <td width='26' title='Раса'>&nbsp;</td>
-    <td class='nopad' title='Ресет' width='28'><a href='plug.php?e=top'>Рес.</a></td>
-    <td width='56' title='Уровень'>Уровень</td><td width='28' title='Master Level'>ML</td><td title='Strength (Сила)'><a href='plug.php?e=top&d=str'>Strength</a></td>
-    <td title='Agility (Ловкость)'><a href='plug.php?e=top&d=agi'>Agility</a></td><td title='Vitality (Живучесть)'><a href='plug.php?e=top&d=vit'>Vitality</a></td>
-    <td title='Energy (Энергия)'><a href='plug.php?e=top&d=ene'>Energy</a></td><td title='Command (Команда)'><a href='plug.php?e=top&d=com'>Command</a></td>
-    <td width='80'>Гильдия</td></tr>
+<div style='margin-top:8px'>
+<table class='mover' width='100%' border='0' align='center' cellspacing='1' cellpadding='3'>
+<tr class='dark' style='font-weight: bold; text-align: center;'>
+    <td width='20' align='left'>№</td>
+    <td width='80' title='name'>Прізвище, ім'я, по батькові</td>
+    <td width='50' title='position'>Посада</td>
+    <td width='90' title='work_telephone'>Службовий телефон</td>
+    <td width='90' title='private_telephone'>Мобільний телефон</td></tr>
+
+    {% for empl in employee %}
+    <tr class='dark' style='text-align: center;'>
+    <td width='20' align='left'>{{ empl.id }}</td>
+    <td width='80' title='name'>{{ empl }}</td>
+    <td width='50' title='position'>{{ empl.position }}</td>
+    <td width='90' title='work_telephone'>{{ empl.work_telephone|safe }}</td>
+    <td width='90' title='private_telephone'>{{ empl.private_telephone|safe }}</td></tr>
+
+
+
+    {% endfor %}
+</table>
+</div>
+
+
+
+{#    <td title='Strength (Сила)'>вапвапвапвапва</td>#}
+{#    <td title='Agility (Ловкость)'>вапвапвап</td>#}
+{#    <td title='Vitality (Живучесть)'>авпвапвапвапвап</td>#}
+{#    <td title='Energy (Энергия)'><a href='plug.php?e=top&d=ene'>Energy</a></td>#}
+{#    <td width='80'>Гильдия</td></tr>#}
     {% endblock %}
