Change in model, test template, add admin and view

--- a/templates/main.html
+++ b/templates/main.html
@@ -7,41 +7,90 @@
 
 {% for prosecutorsoffice in prosecutorsoffices %}
 <center><h3>{{ prosecutorsoffice }}</h3></center>
+    {% if prosecutorsoffice.employees %}
 
+        <div style='margin-top:8px'>
+        <table class='mover' width='100%' border='0' align='center' cellspacing='1' cellpadding='3'>
+        <tr class='dark' style='font-weight: bold; text-align: center;' height='40'>
+        <td width='20' align='left'>№</td>
+        <td width='80' title='name'>Прізвище, ім'я, по батькові</td>
+        <td width='50' title='position'>Посада</td>
+        <td width='90' title='work_telephone'>Службовий телефон</td>
+        <td width='90' title='private_telephone'>Мобільний телефон</td></tr>
 
+        {% for employee in prosecutorsoffice.employees.all %}
+
+            <tr class='dark' style='text-align: center;'>
+            <td width='20' align='left'>{{ employee.id }}</td>
+            <td width='80' title='name'>{{ employee }}</td>
+            <td width='50' title='position'>{{ employee.position }}</td>
+            <td width='90' title='work_telephone'>{{ employee.work_telephone|safe }}</td>
+            <td width='90' title='private_telephone'>{{ employee.private_telephone|safe }}</td></tr>
+
+            {% endfor %}
+
+        </table>
+        </div>
+
+        {% endif %}
+    {% if prosecutorsoffice.department %}
+        <center><h4>{{ prosecutorsoffice.department.all }}</h4></center>
+
+        <div style='margin-top:8px'>
+        <table class='mover' width='100%' border='0' align='center' cellspacing='1' cellpadding='3'>
+        <tr class='dark' style='font-weight: bold; text-align: center;' height='40'>
+        <td width='20' align='left'>№</td>
+        <td width='80' title='name'>Прізвище, ім'я, по батькові</td>
+        <td width='50' title='position'>Посада</td>
+        <td width='90' title='work_telephone'>Службовий телефон</td>
+        <td width='90' title='private_telephone'>Мобільний телефон</td></tr>
+
+        {% for employee in prosecutorsoffice.department.employees %}
+
+            <tr class='dark' style='text-align: center;'>
+            <td width='20' align='left'>{{ employee.id }}</td>
+            <td width='80' title='name'>{{ employee }}</td>
+            <td width='50' title='position'>{{ employee.position }}</td>
+            <td width='90' title='work_telephone'>{{ employee.work_telephone|safe }}</td>
+            <td width='90' title='private_telephone'>{{ employee.private_telephone|safe }}</td></tr>
+
+            {% endfor %}
+
+        </table>
+        </div>
+
+    {% endif %}
 
 
 
     {% endfor %}
 
-
-<div style='margin-top:8px'>
-<table class='mover' width='100%' border='0' align='center' cellspacing='1' cellpadding='3'>
-<tr class='dark' style='font-weight: bold; text-align: center;' height='40'>
-    <td width='20' align='left'>№</td>
-    <td width='80' title='name'>Прізвище, ім'я, по батькові</td>
-    <td width='50' title='position'>Посада</td>
-    <td width='90' title='work_telephone'>Службовий телефон</td>
-    <td width='90' title='private_telephone'>Мобільний телефон</td></tr>
-
-{% for employee in employees %}
-    <tr class='dark' style='text-align: center;'>
-    <td width='20' align='left'>{{ employee.id }}</td>
-    <td width='80' title='name'>{{ employee }}</td>
-    <td width='50' title='position'>{{ employee.position }}</td>
-    <td width='90' title='work_telephone'>{{ employee.work_telephone|safe }}</td>
-    <td width='90' title='private_telephone'>{{ employee.private_telephone|safe }}</td></tr>
-
-
-
-    {% endfor %}
-</table>
-</div>
+{#<div style='margin-top:8px'>#}
+{#<table class='mover' width='100%' border='0' align='center' cellspacing='1' cellpadding='3'>#}
+{#<tr class='dark' style='font-weight: bold; text-align: center;' height='40'>#}
+{#    <td width='20' align='left'>№</td>#}
+{#    <td width='80' title='name'>Прізвище, ім'я, по батькові</td>#}
+{#    <td width='50' title='position'>Посада</td>#}
+{#    <td width='90' title='work_telephone'>Службовий телефон</td>#}
+{#    <td width='90' title='private_telephone'>Мобільний телефон</td></tr>#}
+{##}
+{#{% for employee in employees %}#}
+{#    <tr class='dark' style='text-align: center;'>#}
+{#    <td width='20' align='left'>{{ employee.id }}</td>#}
+{#    <td width='80' title='name'>{{ employee }}</td>#}
+{#    <td width='50' title='position'>{{ employee.position }}</td>#}
+{#    <td width='90' title='work_telephone'>{{ employee.work_telephone|safe }}</td>#}
+{#    <td width='90' title='private_telephone'>{{ employee.private_telephone|safe }}</td></tr>#}
+{##}
+{##}
+{##}
+{#    {% endfor %}#}
+{#</table>#}
+{#</div>#}
 
 
 
 <pre>
-
 
 </pre>
 {% endblock %}
