--- a/templates/table_header.html
+++ b/templates/table_header.html
@@ -1,6 +1,6 @@
-<tr class='dark' style='font-weight: bold; text-align: center;' height='40'>
-    <td width='20' align='left'>№</td>
-    <td width='80' title='name'>Прізвище, ім'я, по батькові</td>
-    <td width='50' title='position'>Посада</td>
-    <td width='90' title='work_telephone'>Службовий телефон</td>
-    <td width='90' title='private_telephone'>Мобільний телефон</td></tr>
+<tr style='text-align: left; font-weight: bold;' height='40'>
+    <td width='22' style='font-weight: bold; text-align: left;'>#</td>
+    <td width='80' title='ПІБ'>Прізвище, ім'я, по батькові</td>
+    <td width='50' title='Посада'>Посада</td>
+    <td width='90' title='Службовий телефон'>Службовий телефон</td>
+    <td width='90' title='Мобільний телефон'>Мобільний телефон</td></tr>
