--- a/templates/table_loop.html
+++ b/templates/table_loop.html
@@ -1,6 +1,6 @@
-<tr class='dark' style='text-align: center;'>
+<tr style='text-align: left;'>
     <td width='20' align='left'>{{ employee.id }}</td>
-    <td width='80' title='name'>{{ employee }}</td>
-    <td width='50' title='position'>{{ employee.position }}</td>
-    <td width='90' title='work_telephone'>{{ employee.work_telephone|safe }}</td>
-    <td width='90' title='private_telephone'>{{ employee.private_telephone|safe }}</td></tr>
+    <td width='80' title='ПІБ'>{{ employee }}</td>
+    <td width='50' title='Посада'>{{ employee.position }}</td>
+    <td width='90' title='Службовий телефон'>{{ employee.work_telephone|safe }}</td>
+    <td width='90' title='Мобільний телефон'>{{ employee.private_telephone|safe }}</td></tr>
