--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,9 +1,10 @@
 {% extends "admin/base.html" %}
 
-{#{% block title %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}#}
+
 {% block title %} Административный сайт Прокуратуры{% endblock %}
+
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">Администрирование Прокуратуры</a></h1>
+<h1 id="site-name"><a href="{% url 'admin:index' %}">Администрирование сайта Прокуратуры</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
