--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %}
 
 
-{% block title %} Административный сайт Прокуратуры{% endblock %}
+{% block title %} Администрирование сайта Прокуратуры{% endblock %}
 
 {% block branding %}
 <h1 id="site-name"><a href="{% url 'admin:index' %}">Администрирование сайта Прокуратуры</a></h1>
