--- a/templates/table_loop.html
+++ b/templates/table_loop.html
@@ -3,5 +3,5 @@
     <td width='100' title='ПІБ'>{{ employee }}</td>
     <td width='100' title='Посада'>{{ employee.position }}</td>
 {#    <td width='90' title='Службовий телефон'>{{ employee.work_telephone|safe }}</td>#}
-        <td width='90' title='Службовий телефон'>{{ employee.tel_escape|safe }}</td>
+        <td width='90' title='Службовий телефон'>{{ employee.tel_work_escape|safe }}</td>
     <td width='90' title='Мобільний телефон'>{{ employee.private_telephone|safe }}</td></tr>
