--- a/templates/table_header.html
+++ b/templates/table_header.html
@@ -1,6 +1,15 @@
-<tr style='text-align: left; font-weight: bold;' height='40'>
-    <td width='22' style='font-weight: bold; text-align: left;'>#</td>
-    <td width='80' title='ПІБ'>Прізвище, ім'я, по батькові</td>
-    <td width='50' title='Посада'>Посада</td>
-    <td width='90' title='Службовий телефон'>Службовий телефон</td>
-    <td width='90' title='Мобільний телефон'>Мобільний телефон</td></tr>
+<tr>
+    <th>#</th>
+    <th>Фамилия имя отчество</th>
+    <th>Должность</th>
+    <th>Служебный телефон</th>
+    <th>Мобильный телефон</th>
+</tr><!-- Table Header -->
+
+
+{#<tr>#}
+{#    <td>#</td>#}
+{#    <td title='ПІБ'>Фамилия имя отчество</td>#}
+{#    <td title='Должность'>Должность</td>#}
+{#    <td title='Служебный телефон'>Служебный телефон</td>#}
+{#    <td title='Мобильный телефон'>Мобильный телефон</td></tr>#}
