--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en">
 <head>
+<link rel="stylesheet" href="/media/css/style.css" type="text/css" />
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
