--- a/templates/table_loop.html
+++ b/templates/table_loop.html
@@ -1,7 +1,6 @@
-<tr style='text-align: left;'>
-    <td width='20' align='left'>{{ forloop.counter }}</td>
-    <td width='100' title='ПІБ'>{{ employee }}</td>
-    <td width='100' title='Посада'>{{ employee.position }}</td>
-{#    <td width='90' title='Службовий телефон'>{{ employee.work_telephone|safe }}</td>#}
-        <td width='90' title='Службовий телефон'>{{ employee.tel_work_escape|safe }}</td>
-    <td width='90' title='Мобільний телефон'>{{ employee.private_telephone|safe }}</td></tr>
+<tr>
+    <td>{{ forloop.counter }}</td>
+    <td title='ФИО'>{{ employee }}</td>
+    <td title='Должность'>{{ employee.position }}</td>
+    <td title='Служебный телефон'>{{ employee.tel_work_escape|safe }}</td>
+    <td title='Мобильный телефон'>{{ employee.private_telephone|safe }}</td></tr>
