Changes in tables look

--- a/templates/table_header.html
+++ b/templates/table_header.html
@@ -1,15 +1,7 @@
 <tr>
-    <th>#</th>
-    <th>Фамилия имя отчество</th>
-    <th>Должность</th>
-    <th>Служебный телефон</th>
-    <th>Мобильный телефон</th>
+    <th width='2%'>#</th>
+    <th width='20%'>Фамилия имя отчество</th>
+    <th width='10%'>Должность</th>
+    <th width='15%'>Служебный телефон</th>
+    <th width='15%'>Мобильный телефон</th>
 </tr><!-- Table Header -->
-
-
-{#<tr>#}
-{#    <td>#</td>#}
-{#    <td title='ПІБ'>Фамилия имя отчество</td>#}
-{#    <td title='Должность'>Должность</td>#}
-{#    <td title='Служебный телефон'>Служебный телефон</td>#}
-{#    <td title='Мобильный телефон'>Мобильный телефон</td></tr>#}
