--- a/media/css/style.css
+++ b/media/css/style.css
@@ -28,7 +28,7 @@
 	background: -moz-linear-gradient(top,  #ededed,  #ebebeb);
 }
 .simple-little-table th:first-child{
-	text-align: left;
+	text-align: center;
 	padding-left:20px;
 }
 .simple-little-table tr:first-child th:first-child{
@@ -46,7 +46,7 @@
 	padding-left:20px;
 }
 .simple-little-table tr td:first-child{
-	text-align: left;
+	text-align: center;
 	padding-left:20px;
 	border-left: 0;
 }
