--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1,3 +1,5 @@
+/*Tables*/
+
 .simple-little-table {
 	font-family:Arial, Helvetica, sans-serif;
 	color:#666;
@@ -98,4 +100,45 @@
 .simple-little-table a:hover {
 	color: #bd5a35;
 	text-decoration:underline;
+}
+
+/* Headers*/
+
+.main h1 {
+	margin: 0.8em 0 0.5em 0;
+	color: #333;
+	font-weight: normal;
+	font-family: 'Orienta', sans-serif;
+	font-size: 36px;
+	line-height: 40px;
+}
+
+.main h2 {
+	margin: 0.8em 0 0.5em 0;
+	color: #333;
+	font-weight: normal;
+	font-family: 'Orienta', sans-serif;
+	font-size: 30px;
+	line-height: 40px;
+	border-bottom: 1px solid #fff;
+	box-shadow: 0 1px 0 rgba(0,0,0,0.1);
+	padding-bottom: 10px;
+}
+
+.main h3 {
+	margin: 0.8em 0 0.5em 0;
+	color: #333;
+	font-weight: normal;
+	font-family: 'Orienta', sans-serif;
+	font-size: 24px;
+	line-height: 40px;
+}
+
+.main h4 {
+	margin: 0.8em 0 0.5em 0;
+	color: #333;
+	font-weight: normal;
+	font-family: 'Orienta', sans-serif;
+	font-size: 18px;
+	line-height: 20px;
 }
