--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
 <link rel="stylesheet" href="/media/css/style.css" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Orienta' rel='stylesheet' type='text/css'>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+<section class="main">
     <center><h1>Прокуратура Одеської області</h1></center>
     {% block content %}{% endblock %}
     {% block footer %}
@@ -15,5 +17,6 @@
     <hr>
     <p>Thanks for visiting my site.</p>
     {% endblock %}
+</section>
 </body>
 </html>
