--- a/templates/main1.html
+++ b/templates/main1.html
@@ -1,3 +1,65 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="/media/css/style.css" type="text/css" />
+    <title>Filter</title>
+</head>
+<body>
+<section class="main">
+    <h1>Прокуратура Одеської області</h1>
+
+    <table class="simple-little-table" cellspacing='0'>
+
+
+        <tr>
+            <th width='50%'>#</th>
+            <th width='50%'>Фамилия имя отчество</th>
+        </tr>
+        <tr>
+            <th width='50%'>#</th>
+            <th width='50%'>Фамилия имя отчество</th>
+        </tr>
+        <tr>
+            <th width='50%'>#</th>
+            <th width='50%'>Фамилия имя отчество</th>
+        </tr>
+        <tr>
+            <th width='50%'>#</th>
+            <th width='50%'>Фамилия имя отчество</th>
+        </tr>
+
+
+    </table>
+
+
+
+
+
+
+
+
+
+
+
+</section>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <style type="text/css"><!--
 fieldset.explicit-width{
     width: 30%; /* Will expand to fit content */
