--- a/templates/main.html
+++ b/templates/main.html
@@ -5,28 +5,26 @@
 {% block content %}
 
     {% for prosecutorsoffice in prosecutorsoffices %}
-        <center><h2>{{ prosecutorsoffice }}</h2></center>
+        <h2>{{ prosecutorsoffice }}</h2>
         {% if prosecutorsoffice.employees.all %}
-{{ prosecutorsoffice.set_all }}
-            <div style='margin-top:8px'>
-                <table class='mover' width='100%' border='0' align='center' cellspacing='1' cellpadding='3'>
+            {{ prosecutorsoffice.set_all }}
 
-                    {% include table_header %}
-                    {% for employee in prosecutorsoffice.sort_employees %}
-                        {% include table_loop %}
-                    {% endfor %}
+            <table class="simple-little-table" cellspacing='0'>
 
-                </table>
-            </div>
+                {% include table_header %}
+                {% for employee in prosecutorsoffice.sort_employees %}
+                    {% include table_loop %}
+                {% endfor %}
+
+            </table>
 
         {% endif %}
         {% if prosecutorsoffice.department.all %}
             {% for department in prosecutorsoffice.department.all %}
-                <center><h3>{{ department }}</h3></center>
+                <h3>{{ department }}</h3>
                 {% if department.employees.all %}
 
-                    <div style='margin-top:8px'>
-                    <table class='mover' width='100%' border='0' align='center' cellspacing='1' cellpadding='3'>
+                    <table class="simple-little-table" cellspacing='0'>
 
                     {% include table_header %}
                     {% for employee in department.sort_employees %}
@@ -35,15 +33,13 @@
                 {% endif %}
 
             </table>
-            </div>
 
                 {% if department.division.all %}
                     {% for division in department.division.all %}
-                        <center><h4>{{ division }}</h4></center>
+                        <h4>{{ division }}</h4>
                         {% if division.employees.all %}
 
-                            <div style='margin-top:8px'>
-                            <table class='mover' width='100%' border='0' align='center' cellspacing='1' cellpadding='3'>
+                            <table class="simple-little-table" cellspacing='0'>
 
                             {% include table_header %}
                             {% for employee in division.sort_employees %}
@@ -52,7 +48,6 @@
                         {% endif %}
 
                     </table>
-                    </div>
 
                     {% endfor %}
                 {% endif %}
@@ -60,11 +55,10 @@
         {% endif %}
         {% if prosecutorsoffice.division.all %}
             {% for division in prosecutorsoffice.division.all %}
-                <center><h4>{{ division }}</h4></center>
+                <h4>{{ division }}</h4>
                 {% if division.employees.all %}
 
-                    <div style='margin-top:8px'>
-                    <table class='mover' width='100%' border='0' align='center' cellspacing='1' cellpadding='3'>
+                    <table class="simple-little-table" cellspacing='0'>
 
                     {% include table_header %}
                     {% for employee in division.sort_employees %}
@@ -73,10 +67,8 @@
                 {% endif %}
 
             </table>
-            </div>
 
             {% endfor %}
         {% endif %}
     {% endfor %}
-
 {% endblock %}
