--- a/templates/table_loop.html
+++ b/templates/table_loop.html
@@ -1,6 +1,6 @@
 <tr>
     <td width='2%'>{{ forloop.counter }}</td>
-    <td width='20%' title='ФИО'>{{ employee }}</td>
+    <td width='20%'>{{ employee }}</td>
     <td width='10%' title='Должность'>{{ employee.position }}</td>
     <td width='15%' title='Служебный телефон'>{{ employee.tel_work_escape|safe }}</td>
     <td width='15%' title='Мобильный телефон'>{{ employee.private_telephone|safe }}</td>
